css: Fix modal display issue
change:
1. Modified the settings and game section height.
2. Added margin to the ‘go to new game’ button.
reason:
The landscape mode alert was looking cropped after adding the ‘go to new game’ button on the game section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   --main-light-color: #fafafa;
   --yellow-disc-color: #ffc736;
   --red-disc-color: #de0f3f;
-  --overay-color: #1c304a70;
+  --overlay-color: #1c304a70;
 }
 
 /*--------------- Basic styling ---------------*/
@@ -64,7 +64,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0 1px 2px var(--overay-color);
+  box-shadow: 0 1px 2px var(--overlay-color);
   border-bottom: 1px solid var(--main-dark-color);
   width: 100%;
   background-color: var(--main-light-color);
@@ -208,7 +208,6 @@ h2 {
   position: relative;
   display: none;
   width: 100%;
-  height: 100%;
   padding: 1em 0;
   background-color: var(--main-light-color);
 }
@@ -232,7 +231,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--overay-color);
+  background-color: var(--overlay-color);
 }
 
 .alert-container {
@@ -242,7 +241,7 @@ h2 {
   align-items: center;
   border-radius: 10px;
   width: 95vw;
-  max-width: 20rem;
+  max-width: 30rem;
   padding: 1em 2em;
   background-color: var(--main-light-color);
 }
@@ -312,6 +311,10 @@ input[type="email"] {
 .main-heading-title {
   font-family: 'Fredoka One', cursive;
   white-space: nowrap;
+}
+
+.section:first-of-type {
+  height: 100%;
 }
 
 .setting-heading {
@@ -393,6 +396,10 @@ input[type="email"] {
 }
 
 /*--------------- Play page ---------------*/
+
+.section.game {
+  min-height: 100%;
+}
 
 .board-header {
   grid-template-columns: 1fr 2rem;
@@ -521,6 +528,10 @@ input[type="email"] {
   text-align: center;
 }
 
+.section.game>.btn {
+  margin: 1.5em;
+}
+
 .landscape-overlay {
   position: absolute;
   z-index: 10;
@@ -531,7 +542,7 @@ input[type="email"] {
   display: none;
   justify-content: center;
   align-items: center;
-  background-color: var(--overay-color);
+  background-color: var(--overlay-color);
 }
 
 /*--------------- Help page ---------------*/
